Got argument attributes working; used argument attributes to improve routine syntax line (with links).

--- a/idldoc/src/resources/listing.css
+++ b/idldoc/src/resources/listing.css
@@ -12,6 +12,7 @@ h1 span {
   font-size: 80%; 
   font-samily: Verdana, Helvetica, sans-serif; 
   font-weight: normal; 
+  color: #606060;
 }
 
 /* list items */
