--- a/idldoc/src/templates/idldoc-header.tt
+++ b/idldoc/src/templates/idldoc-header.tt
@@ -15,9 +15,11 @@
     
     <td [% IF current_template eq 'profile' || current_template eq 'savefile' %]class="selected"[% END %]>File</td>
     
-    <td>Source</td>
+    <td [% IF current_template eq 'source' %]class="selected"[% END %]>
+      [% IF current_template eq 'profile' %]<a href="[% source_url %]">Source</a>[% ELSE %]Source[% END %]      
+    </td>
     
-    <td>Etc</td>
+    <td [% IF current_template eq 'idldocfile' %]class="selected"[% END %]>Etc</td>
     
     <td [% IF current_template eq 'categories' %]class="selected"[% END %]>
     	<a href="[% relative_root %]categories.html">Categories</a>
@@ -46,13 +48,17 @@
 </table>
 
 [% IF current_template eq 'profile' %]
-<p class="localnavbar smallest"><a href="[% local_url %]" target="_top">single page</a> | use frames &nbsp;&nbsp;&nbsp; summary &nbsp;&nbsp;&nbsp; class &nbsp;&nbsp;&nbsp; fields &nbsp;&nbsp;&nbsp; <a href="#routine-details">routine details</a> &nbsp;&nbsp;&nbsp; <a href="#attributes">file attributes</a></p>
+<p class="localnavbar smallest"><a href="[% local_url %]" target="_top">single page</a> | <a href="[% relative_root %]index.html" target="_top">use frames</a> &nbsp;&nbsp;&nbsp; summary &nbsp;&nbsp;&nbsp; class &nbsp;&nbsp;&nbsp; fields &nbsp;&nbsp;&nbsp; <a href="#routine-details">routine details</a> &nbsp;&nbsp;&nbsp; <a href="#attributes">file attributes</a></p>
 [% END %]
 
 [% IF current_template eq 'warnings' %]
-<p class="localnavbar smallest"><a href="idldoc-warnings.html" target="_top">single page</a> | use frames &nbsp;&nbsp;&nbsp; <a href="#todo">todo</a> &nbsp;&nbsp;&nbsp; <a href="#bugs">bugs</a> &nbsp;&nbsp;&nbsp; <a href="#undocumented">undocumented</a> &nbsp;&nbsp;&nbsp; <a href="#obsolete">obsolete</a> &nbsp;&nbsp;&nbsp; <a href="#statistics">statistics</a></p>
+<p class="localnavbar smallest"><a href="idldoc-warnings.html" target="_top">single page</a> | <a href="[% relative_root %]index.html" target="_top">use frames</a> &nbsp;&nbsp;&nbsp; <a href="#todo">todo</a> &nbsp;&nbsp;&nbsp; <a href="#bugs">bugs</a> &nbsp;&nbsp;&nbsp; <a href="#undocumented">undocumented</a> &nbsp;&nbsp;&nbsp; <a href="#obsolete">obsolete</a> &nbsp;&nbsp;&nbsp; <a href="#statistics">statistics</a></p>
 [% END %]
 
 [% IF current_template eq 'help' %]
-<p class="localnavbar smallest"><a href="idldoc-help.html" target="_top">single page</a> | use frames &nbsp;&nbsp;&nbsp; <a href="#calling">calling</a> &nbsp;&nbsp;&nbsp; <a href="#commenting">commenting</a> &nbsp;&nbsp;&nbsp; <a href="#customizing">customizing</a></p>
+<p class="localnavbar smallest"><a href="idldoc-help.html" target="_top">single page</a> | <a href="[% relative_root %]index.html" target="_top">use frames</a> &nbsp;&nbsp;&nbsp; <a href="#calling">calling</a> &nbsp;&nbsp;&nbsp; <a href="#commenting">commenting</a> &nbsp;&nbsp;&nbsp; <a href="#customizing">customizing</a></p>
+[% END %]
+
+[% IF current_template eq 'overview' %]
+<p class="localnavbar smallest"><a href="idldoc-help.html" target="_top">single page</a> | <a href="[% relative_root %]index.html" target="_top">use frames</a> &nbsp;&nbsp;&nbsp; <a href="#directories">directories</a> &nbsp;&nbsp;&nbsp; <a href="#statistics">project statistics</a> </p>
 [% END %]
