--- a/idldoc/src/templates/profile.tt
+++ b/idldoc/src/templates/profile.tt
@@ -122,6 +122,33 @@
             </dl>
           [% END %]
           
+          [% IF has_author_info %]
+          <h3>Author information</h3>
+
+            <table class="attribute small">
+              [% IF has_author %]
+              <tr>
+                <td class="name">Author:</td>
+                <td>[% author %]</td>
+              </tr>          
+              [% END %]
+              
+              [% IF has_copyright %]
+              <tr>
+                <td class="name">Copyright:</td>
+                <td>[% copyright %]</td>
+              </tr>          
+              [% END %]
+              
+              [% IF has_history %]
+              <tr>
+                <td class="name">History:</td>
+                <td>[% history %]</td>
+              </tr>          
+              [% END %]
+            </table>          
+          [% END %]
+          
           [% IF has_others %]
           <h3>Other attributes</h3>
 
