Added file examples for IDLdoc format parser. Routines and files have a isVisible method to use current system.user setting and their own private/hidden status to determine if they are visible.

--- a/idldoc/src/templates/profile.tt
+++ b/idldoc/src/templates/profile.tt
@@ -45,6 +45,12 @@
       </div>
       [% END %]
 
+      [% IF has_examples %]
+      <h2>Examples</h2>
+      
+      <div class="small">[% examples %]</div>      
+      [% END %]
+      
       [% IF is_class %][% SCOPE class %]
       <h2>Class description</h2>
       
