Added restrictions tag to IDLdoc format parser.

--- a/idldoc/src/templates/profile.tt
+++ b/idldoc/src/templates/profile.tt
@@ -197,7 +197,14 @@
                 <td>[% todo %]</td>
               </tr>          
               [% END %]
-                          
+
+              [% IF has_restrictions %]
+              <tr>
+                <td class="name">Restrictions:</td>
+                <td>[% restrictions %]</td>
+              </tr>          
+              [% END %]
+                                        
               [% IF has_bugs %]
               <tr>
                 <td class="name">Bugs:</td>
