--- a/idldoc/src/templates/profile.tt
+++ b/idldoc/src/templates/profile.tt
@@ -71,7 +71,29 @@
       	[% END %]
       [% END %]
       
+      [% IF n_properties gt 0 %]
+      <h3>Properties</h3>
+      	<div class="details">
+	        <dl>
+	          [% FOREACH p IN properties %][% SCOPE p %]
+	          <dt>[% name %] <span class="smaller">[% IF is_get %]get [% END %][% IF is_set %]set [% END %][% IF is_init %]init [% END %]</span></dt>
+	          <dd class="small">[% comments %]</dd>
+	          [% END %][% END %]
+	        </dl>  
+        </div>    
+      [% END %]
+      
+      [% IF n_fields gt 0 %]
       <h3>Fields</h3>
+      	<div class="details">
+	        <dl>
+	          [% FOREACH f IN fields %][% SCOPE f %]
+	          <dt>[% name %] <span class="smaller">[% type %]</span></dt>
+	          <dd class="small">[% comments %]</dd>
+	          [% END %][% END %]
+	        </dl>        	
+      	</div>
+      [% END %]
       
       [% END %][% END %]
       
@@ -128,7 +150,7 @@
     	  [% IF n_routines gt 1 %]<h2>Routine details</h2>[% END %]
         
         [% FOREACH r IN routines %][% SCOPE r %]
-        <div class="routine-details" id="[% name %]">
+        <div class="routine-details details" id="[% name %]">
         	<h2 class="routine-name"><a href="#root" class="top">top</a>[% name %]<span class="routine-attributes">[% IF is_private %]private [% END %][% IF is_obsolete %]obsolete [% END %][% IF is_abstract %]abstract [% END %]</span></h2>
         	
           <p class="syntax"><code>[% IF is_function %]<span class="var">result</span> = [% END %][% name %][% IF is_function %]([% END %][% IF n_parameters gt 0 %][% FOREACH p IN parameters %][% SCOPE p %]<span class="argument">[% IF is_optional %] [[% END %][% prefix %]<a href="#[% id %]">[% name %]</a>[% suffix %][% IF is_optional %]][% END %]</span>[% END %][% END %][% END %][% IF n_keywords gt 0 %][% FOREACH k IN keywords %][% SCOPE k %]<span class="argument">[% IF is_optional %] [[% END %][% prefix %][% IF is_boolean %]/[% END %]<a href="#[% id %]">[% name %]</a>[% IF ~is_boolean %]=<span class="var">[% IF type ne '' %][% type %][% ELSE %][% name %][% END %]</span>[% END %][% suffix %][% IF is_optional %]][% END %]</span>[% END %][% END %][% END %][% IF is_function %])[% END %]</code></p>
@@ -145,20 +167,20 @@
           [% IF n_parameters gt 0 %]
           <h3>Parameters</h3>
             <dl>
-            [% FOREACH p IN parameters %][% SCOPE p %]
+              [% FOREACH p IN parameters %][% SCOPE p %]
               <dt id="[% id %]">[% name %] <span class="smaller">[% IF is_input %]in [% END %][% IF is_output %]out [% END %][% IF is_optional %]optional [% END %][% IF is_required %]required [% END %][% IF is_private %]private [% END %][% IF is_hidden %]hidden [% END %][% IF is_obsolete %]obsolete [% END %][% IF type ne '' %]type=[% type %] [% END %][% IF default_value ne '' %]default=[% default_value %][% END %]</span></dt>
               <dd class="small">[% comments %]</dd>
-            [% END %][% END %]
+              [% END %][% END %]
             </dl>
           [% END %]
           
           [% IF n_keywords gt 0 %]
           <h3>Keywords</h3>
             <dl>
-            [% FOREACH k IN keywords %][% SCOPE k %]
+              [% FOREACH k IN keywords %][% SCOPE k %]
               <dt id="[% id %]">[% name %] <span class="smaller">[% IF is_input %]in [% END %][% IF is_output %]out [% END %][% IF is_optional %]optional [% END %][% IF is_required %]required [% END %][% IF is_private %]private [% END %][% IF is_hidden %]hidden [% END %][% IF is_obsolete %]obsolete [% END %][% IF type ne '' %]type=[% type %] [% END %][% IF default_value ne '' %]default=[% default_value %][% END %]</span></dt>
               <dd class="small">[% comments %]</dd>
-            [% END %][% END %]
+              [% END %][% END %]
             </dl>
           [% END %]
           
