--- a/idldoc/src/templates/profile.tt
+++ b/idldoc/src/templates/profile.tt
@@ -9,10 +9,10 @@
 
     [% IF embed %]
     <style type="text/css" media="all">
-         [% INCLUDE css_location %]
+      [% INCLUDE css_location %]
     </style>
     <style type="text/css" media="print">
-         [% INCLUDE print_css_location %]
+      [% INCLUDE print_css_location %]
     </style>
     [% ELSE %]
     <link rel="stylesheet" type="text/css" media="all" 
@@ -83,7 +83,7 @@
         </div>    
       [% END %]
       
-      [% IF n_fields gt 0 %]
+      [% IF n_fields gt 0 && ~user %]
       <h3>Fields</h3>
       	<div class="details">
 	        <dl>
