--- a/idldoc/src/resources/main.css
+++ b/idldoc/src/resources/main.css
@@ -20,7 +20,8 @@ h1, h2, h3, h4 { font-weight:normal; color: #900000; margin-top: 1.5em; }
 .smallest { font-family: Verdana, Helvetica, sans-serif; font-size: 70%; }
 h1.basename { margin-top: 0; margin-bottom: 0; }
 h2.directory { font-size: 90%; margin-bottom: 0; }
-h2.routine-name { margin-top: 0; }
+h2.routine-name { margin-top: 0; margin-bottom: 0; }
+p.categories { color: #384806; margin-top: 0; }
 span.file_attribute { float: right; color: #384806; margin: 0 0 1em 3em; }
 div#file_comments { margin-top: 1em; }
 
@@ -44,7 +45,7 @@ a.top {
 code { font-family: Monaco; "Courier New", Courier, monospace; }
 code.listing { white-space: pre; display: block; padding: 0.5em 3em 0.5em 3em; }
 code.source { white-space: pre; display: block; font-size: 90%; }
-.syntax { margin-left: 1.5em; text-indent: -1.5em; }
+.syntax { margin-top: 1em; margin-left: 1.5em; text-indent: -1.5em; }
 .var { font-style: italic; } 
 .argument { } /* white-space: nowrap; does not work in Safari (and sometimes not even in Firefox) */
 
