Better formatting of fields, added types to fields; fixed typo in IDLdoc format parser.

--- a/idldoc/src/templates/profile.tt
+++ b/idldoc/src/templates/profile.tt
@@ -101,14 +101,16 @@
 	          [% END %][% END %]
 	        </dl>        	
       	</div>
-      	
-      	[% IF n_ancestors gt 0 %]
-      	[% FOREACH a IN ancestors %]
-      	  <p class="small">Fields in [% IF a->hasUrl() %]<a href="[% relative_root %][% a->getUrl() %]">[% END %][% a->getClassname() %][% IF a->hasUrl() %]</a>[% END %]: [% strjoin(a->getFieldNames(), ', ') %]</p>
-      	[% END %]
-      	[% END %]
       [% END %]
       
+      [% IF n_ancestors gt 0 %]
+      [% FOREACH a IN ancestors %]
+      	[% IF a->getFieldCount() %]
+      	<p class="indented small">Fields in [% IF a->hasUrl() %]<a href="[% relative_root %][% a->getUrl() %]">[% END %][% a->getClassname() %][% IF a->hasUrl() %]</a>[% END %]: [% strjoin(a->getFieldNames() + ': <code>' + a->getFieldTypes() + '</code>', ', ') %]</p>
+      	[% END %]
+      [% END %]
+      [% END %]
+      	      
       [% END %][% END %]
       
       [% IF has_author_info %]
