--- a/idldoc/src/resources/main.css
+++ b/idldoc/src/resources/main.css
@@ -55,6 +55,7 @@ dl.routine-summary dd { margin-bottom: 0.5em; margin-left: 2em; }
 /* general styles */
 ul li { list-style-type: none; }
 table { empty-cells: show; }
+dd { margin-bottom: 0.25em; }
 
 p.indent { margin-left: 2em; }
 
