--- a/idldoc/src/templates/warnings.tt
+++ b/idldoc/src/templates/warnings.tt
@@ -28,9 +28,13 @@
     
     <div class="content">
     
+      [% IF n_todos eq 0 && n_bugs eq 0 && n_undocumented eq 0 && n_obsolete eq 0 && ~statistics && required_version eq '' %]
+      <p>No warnings to report.</p>
+      [% END %]
+      
       [% IF n_todos gt 0 %]
     	<div id="todos">
-    		<h2>Todos</h2>
+    		<h2>Routines with todos</h2>
     		
     		<ul>
     		[% FOREACH r IN todos %][% SCOPE r %]
@@ -42,7 +46,7 @@
     	
     	[% IF n_bugs gt 0 %]
     	<div id="bugs">
-    		<h2>Bugs</h2>
+    		<h2>Routines with noted bugs</h2>
     		
         <ul>
         [% FOREACH r IN bugs %][% SCOPE r %]
@@ -54,19 +58,20 @@
     	
     	[% IF n_undocumented gt 0 %]
     	<div id="undocumented">	
-    		<h2>Undocumented</h2>   
+    		<h2>Routines without full documentation</h2>   
     		
-        <ul>
+        <dl>
         [% FOREACH r IN undocumented %][% SCOPE r %]
-          <li><a href="[% url %][% local_url %]">[% location %][% basename %]</a>: <a href="[% url %][% local_url %]#[% name %]">[% name %]</a></li>        
+          <dt><a href="[% url %][% local_url %]">[% location %][% basename %]</a>: <a href="[% url %][% local_url %]#[% name %]">[% name %]</a></dt>
+          <dd>[% IF documentation_level eq 0 %]no documentation[% ELSE %] partial documentation[% END %]</dd>        
         [% END %][% END %]
-        </ul>    		
+        </dl>    		
     	</div>
     	[% END %]
     	
     	[% IF n_obsolete gt 0 %]
     	<div id="obsolete">
-    		<h2>Obsolete</h2>
+    		<h2>Obsolete routines</h2>
 
         <ul>
         [% FOREACH r IN obsolete %][% SCOPE r %]
