Made output respect hidden/private routines (need to handle hidden/private files still).

--- a/idldoc/src/templates/index-entries.tt
+++ b/idldoc/src/templates/index-entries.tt
@@ -37,7 +37,7 @@
     	  <dl>
     	  [% FOREACH item IN system->getIndexEntries(letter) %][% SCOPE item %]
     	    <dt><a href="[% index_url %]">[% index_name %]</a><dt>
-    	    <dd>[% index_type %]</dd>
+    	    <dd class="small">[% index_type %]</dd>
     	  [% END %][% END %]
     	  </dl>
     	[% END %]
